# pureshell

./: CHANGELOG.md  Makefile  README.md  cabal.project  cabal.project.freeze  pureshell.cabal
app/: Main.hs
docs/: Todo.org
examples/: Main.hs
pureshell/App/: Driver.hs  Main.hs  Options.hs
pureshell/Data/: Fin.hs  Nat.hs  Permutation.hs  Vec.hs
pureshell/Data/List/: Props.hs
pureshell/Data/Permutation/: Enumerate.hs  Pretty.hs
pureshell/Data/Vec/: Permute.hs  Props.hs
pureshell/Language/: PureShell.hs
pureshell/Language/Bash/: Test.hs
pureshell/Language/PureShell/: Identifiers.hs  Main.hs  Procedural.hs
pureshell/Language/PureShell/Combinatory/: CodeGen.hs  Compile.hs  Context.hs  Examples.hs  IR.hs  Lower.hs  Shell.hs  Types.hs
pureshell/Language/PureShell/Context/: Ident.hs  Literals.hs
pureshell/Language/PureShell/Context/CoreFn/: IR.hs  Lower.hs
pureshell/Language/PureShell/Context/Split/: IR.hs
pureshell/Language/PureShell/ContextCoreFn/: CodeGen.hs  IR.hs  Pretty.hs
pureshell/Language/PureShell/CoreFn/: CodeGen.hs  IR.hs  Lower.hs  LowerToContextCoreFn.hs
pureshell/Language/PureShell/Procedural/: CodeGen.hs  IR.hs  Lower.hs
pureshell/Language/PureShell/Split/: IR.hs
purs-examples/: Makefile  example.purs  foo.purs  import.purs  lambdas.purs  literals.purs  toprecdecl.purs
