cabal-version:      2.4
name:               pureshell
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Björn Gohla
maintainer:         b.gohla@gmx.de

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable examples
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0, purescript,
                      bash, aeson, bytestring, pureshell,
                      purescript-cst, text, natural
    hs-source-dirs:   examples
    default-language: Haskell2010


executable pureshell
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0
                    , aeson
                    , bash
                    , bytestring
                    , purescript
                    , purescript-cst
                    , pureshell
                    , text
    hs-source-dirs:   app
    default-language: Haskell2010

library
        hs-source-dirs: pureshell
        default-language: Haskell2010
        build-depends: base ^>=4.14.3.0
                     , aeson
                     , bash
                     , binary
                     , bytestring
                     , containers
                     , data-default-class
                     , extra
                     , mtl
                     , natural
                     , polysemy
                     , process
                     , purescript
                     , purescript-cst
                     , shell-escape
                     , singletons ==2.7
                     , temporary
                     , text
                     , utf8-string
        exposed-modules:
                       -- Language.PureShell
                       -- ,
                         App.Driver
                       , Language.Bash.Test
                       , Language.PureShell.Combinatory.CodeGen
                       , Language.PureShell.Combinatory.Examples
                       , Language.PureShell.Combinatory.IR
                       , Language.PureShell.Combinatory.Lower
                       , Language.PureShell.Combinatory.Shell
                       , Language.PureShell.Identifiers
--                     , Language.PureShell.Main
                       , Language.PureShell.Procedural.CodeGen
                       , Language.PureShell.Procedural.IR
                       , Language.PureShell.Procedural.Lower
        ghc-options : -Wall
