cabal-version:      2.4
name:               pureshell
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Björn Gohla
maintainer:         b.gohla@gmx.de

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable examples
  main-is:          Main.hs

  -- Modules included in this executable, other than Main.
  -- other-modules:

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:
  build-depends:
    , aeson
    , base        ^>=4.16.3.0
    , bash
    , bytestring
    , natural
    , purescript
    , pureshell
    , text

  hs-source-dirs:   examples
  default-language: Haskell2010

executable pureshell
  main-is:          Main.hs

  -- Modules included in this executable, other than Main.
  -- other-modules:

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:
  build-depends:
    , aeson
    , base        ^>=4.16.3.0
    , bash
    , bytestring
    , purescript
    , pureshell
    , text

  hs-source-dirs:   app
  default-language: Haskell2010

library
  hs-source-dirs:   pureshell
  default-language: Haskell2010
  build-depends:
    , aeson
    , ansi-wl-pprint
    , base                  ^>=4.16.3.0
    , bash
    , binary
    , bytestring
    , containers
    , data-default-class
    , extra
    , filepath
    , mtl
    , natural
    , optparse-declarative
    , polysemy
    , process
    , purescript
    , shell-escape
    , singletons
    , singletons-base
    , singletons-th
    , template-haskell
    , temporary
    , text
    , utf8-string

  exposed-modules:
    App.Driver
    App.Main
    App.Options
    Data.Fin
    Data.List.Props
    Data.Nat
    Data.Permutation
    Data.Permutation.Enumerate
    Data.Permutation.Pretty
    Data.Vec
    Data.Vec.Permute
    Data.Vec.Props
    Language.Bash.Test
    Language.PureShell
    Language.PureShell.Combinatory.CodeGen
    Language.PureShell.Combinatory.Context
    Language.PureShell.Combinatory.Examples
    Language.PureShell.Combinatory.IR
    Language.PureShell.Combinatory.Lower
    Language.PureShell.Combinatory.Shell
    Language.PureShell.ContextCoreFn.CodeGen
    Language.PureShell.ContextCoreFn.IR
    Language.PureShell.ContextCoreFn.Pretty
    Language.PureShell.CoreFn.CodeGen
    Language.PureShell.CoreFn.IR
    Language.PureShell.CoreFn.Lower
    Language.PureShell.CoreFn.LowerToContextCoreFn
    Language.PureShell.Identifiers
    Language.PureShell.Main
    Language.PureShell.Procedural.CodeGen
    Language.PureShell.Procedural.IR
    Language.PureShell.Procedural.Lower

  ghc-options:      -Wall
